# pineveilbot

./: Procfile  bot_handler.py  bot_messages.json  config.py  conversation_manager.py  main.py  message_config.py  pyproject.toml  render.yalm  render.yaml  replit.md  requirements.txt  simple_bot.py  web_interface.py
attached_assets/: Pasted--Pronto-Seu-bot-agora-est-nos-trinques-Principais-Melhorias-Implementadas-1-Sistema-d-1753811082229_1753811082231.txt
static/: style.css
templates/: conversations.html  index.html  message_editor.html
